First draft with all four sports included and working.

--- a/public/css/freelancer.css
+++ b/public/css/freelancer.css
@@ -504,6 +504,6 @@ fieldset[disabled] .btn-success.active {
   display: none;
 }
 
-.search_bar {
-  color: black;
+.sports_pic {
+     margin: 100000px 100000px 100000px 100000px;
 }
