--- a/views/basketball_home.erb
+++ b/views/basketball_home.erb
@@ -41,7 +41,7 @@
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
                     <span class="sr-only">Toggle navigation</span> Menu <i class="fa fa-bars"></i>
                 </button>
-                <a class="navbar-brand" href="#page-top">Find your field</a>
+                <a class="navbar-brand" href="#page-top">Find your court</a>
             </div>
 
             <!-- Collect the nav links, forms, and other content for toggling -->
@@ -72,9 +72,9 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="intro-text">
-                        <span class="name">Find your field</span>
+                        <span class="name">Find your court</span>
                         <hr class="star-light">
-                        <span class="skills">Find soccer fields near you.</span>
+                        <span class="skills">Find basketball courts near you.</span>
                     </div>
                 </div>
             </div>
@@ -94,10 +94,9 @@
               <a href="http://main-coding-stuff-205030.nitrousapp.com/">
               <img src="http://pre15.deviantart.net/4967/th/pre/f/2012/254/9/6/bliss_soccer_field_by_paullus23-d5efdrz.jpg" alt="Go to soccer search!" width="450" height="275" border="0" class="sports_pic" style="margin: 65px 65px 65px 65px;">
               </a>
-               <a href="http://main-coding-stuff-205030.nitrousapp.com/tennis_home" class="sports_pic">
-                <img src="http://static1.squarespace.com/static/563032b9e4b0465682348ce1/t/56cccd8cc6fc08356f9df8fc/1456262575475/" alt="Go to soccer search!" width="450" height="275" border="0" style="margin: 65px 65px 65px 65px;">
+                             <a href="http://main-coding-stuff-205030.nitrousapp.com/tennis_home" class="sports_pic">                <img src="http://static1.squarespace.com/static/563032b9e4b0465682348ce1/t/56cccd8cc6fc08356f9df8fc/1456262575475/" alt="Go to soccer search!" width="450" height="275" border="0" style="margin: 65px 65px 65px 65px;">
               </a>
-             <a href="http://main-coding-stuff-205030.nitrousapp.com/swimming_home">
+              <a href="http://main-coding-stuff-205030.nitrousapp.com/swimming_home">
                 <img src="http://www.aquaproduct.co.jp/english/img/product/title_aqua_14.jpg" alt="Go to soccer search!" width="450" height="275" border="0" class="sports_pic" style="margin: 65px 65px 65px 65px;">
               </a>
               <a href="http://main-coding-stuff-205030.nitrousapp.com/basketball_home">
@@ -183,9 +182,9 @@
               <br>
 <!--                 <div class="col-lg-4"> -->
                   <center>
-                    <form method="POST" action="/soccer_result">
+                    <form method="POST" action="/basketball_result">
                       <font color=#18BC9C>
-                      <input type="text" name="soccer_result" class="search_bar">
+                      <input type="text" name="basketball_result" class="search_bar">
                       </font>
                       <br>
                     <input type="submit" class="btn btn-success btn-lg">
