--- a/views/soccer_result.erb
+++ b/views/soccer_result.erb
@@ -54,7 +54,7 @@
                         <a href="#portfolio">Choose Sport</a>
                     </li>
                     <li class="page-scroll">
-                        <a href="#about">Search</a>
+                        <a href="#about">Search Manhattan</a>
                     </li>
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
@@ -76,7 +76,7 @@
                         <hr class="star-light">
                         <span class="skills"><%@soccer_field.each do |fields|%>
                       <%=fields%>
-                       <br>   
+                       <br>
                       <%end%></span>
                     </div>
                 </div>
@@ -94,7 +94,19 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-sm-4 portfolio-item">
+             <a href="http://main-coding-stuff-205030.nitrousapp.com/" class="sports_pic">
+                          <img src="http://pre15.deviantart.net/4967/th/pre/f/2012/254/9/6/bliss_soccer_field_by_paullus23-d5efdrz.jpg" alt="Go to soccer search!" width="450" height="275" border="0" style="margin: 65px 65px 65px 65px;">
+             </a>
+                <a href="http://main-coding-stuff-205030.nitrousapp.com/tennis_home" class="sports_pic">
+                <img src="http://static1.squarespace.com/static/563032b9e4b0465682348ce1/t/56cccd8cc6fc08356f9df8fc/1456262575475/" alt="Go to soccer search!" width="450" height="275" border="0" style="margin: 65px 65px 65px 65px;">
+              </a>
+             <a href="http://main-coding-stuff-205030.nitrousapp.com/swimming_home">
+                <img src="http://www.aquaproduct.co.jp/english/img/product/title_aqua_14.jpg" alt="Go to soccer search!" width="450" height="275" border="0" class="sports_pic" style="margin: 65px 65px 65px 65px;">
+              </a>
+              <a href="http://main-coding-stuff-205030.nitrousapp.com/basketball_home">
+                <img src=http://www.gymsportsflooring.com/wp-content/uploads/2011/07/Basketball-Court-7.jpg width="450" height="275" border="0" class="sports_pic" style="margin: 65px 65px 65px 65px;">
+              </a>
+<!--                 <div class="col-sm-4 portfolio-item">
                     <a href="#portfolioModal1" class="portfolio-link" data-toggle="modal">
                         <div class="caption">
                             <div class="caption-content">
@@ -153,13 +165,13 @@
                         </div>
                         <img src="img/portfolio/submarine.png" class="img-responsive" alt="">
                     </a>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
 
     <!-- About Section -->
-    <section class="success" id="about">
+<!--     <section class="success" id="about">
         <div class="container">
             <div class="row">
                 <div class="col-lg-12 text-center">
@@ -184,7 +196,7 @@
                 </div>
             </div>
         </div>
-    </section>
+    </section> -->
 
     <!-- Contact Section -->
     <section id="contact">
