--- a/views/soccer_result.erb
+++ b/views/soccer_result.erb
@@ -53,9 +53,9 @@
                     <li class="page-scroll">
                         <a href="#portfolio">Choose Sport</a>
                     </li>
-                    <li class="page-scroll">
+<!--                     <li class="page-scroll">
                         <a href="#about">Search Manhattan</a>
-                    </li>
+                    </li> -->
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
@@ -74,8 +74,11 @@
                     <div class="intro-text">
                         <span class="name">The Fields Closest to you Are:</span>
                         <hr class="star-light">
-                        <span class="skills"><%@soccer_field.each do |fields|%>
-                      <%=fields%>
+                        <span class="skills"><%@soccer_fields_array.each do |soccer_name_and_link|%>
+                      <%soccer_name_and_link.each do |fields|%>
+                          <%=fields%>
+                          <br>
+                          <%end%>
                        <br>
                       <%end%></span>
                     </div>
