--- a/views/tennis_result.erb
+++ b/views/tennis_result.erb
@@ -53,9 +53,9 @@
                     <li class="page-scroll">
                         <a href="#portfolio">Choose Sport</a>
                     </li>
-                    <li class="page-scroll">
+<!--                     <li class="page-scroll">
                         <a href="#about">Search Manhattan</a>
-                    </li>
+                    </li> -->
                     <li class="page-scroll">
                         <a href="#contact">Contact</a>
                     </li>
@@ -74,8 +74,11 @@
                     <div class="intro-text">
                         <span class="name">The courts closest to you are:</span>
                         <hr class="star-light">
-                        <span class="skills"><%@tennis_court.each do |courts|%>
+                        <span class="skills"><%@tennis_courts_array.each do |tennis_name_and_link|%>
+                          <%tennis_name_and_link.each do |courts|%>
                       <%=courts%>
+                          <br>
+                          <%end%>
                        <br>
                       <%end%></span>
                     </div>
