Fixed the links to the pages and the about seciton.

--- a/views/swimming_result.erb
+++ b/views/swimming_result.erb
@@ -97,16 +97,16 @@
                 </div>
             </div>
             <div class="row">
-             <a href="http://main-coding-stuff-205030.nitrousapp.com/" class="sports_pic">
+             <a href="/" class="sports_pic">
                           <img src="http://pre15.deviantart.net/4967/th/pre/f/2012/254/9/6/bliss_soccer_field_by_paullus23-d5efdrz.jpg" alt="Go to soccer search!" width="450" height="275" border="0" style="margin: 65px 65px 65px 65px;">
              </a>
-              <a href="http://main-coding-stuff-205030.nitrousapp.com/tennis_home" class="sports_pic">
+              <a href="/tennis_home" class="sports_pic">
                 <img src="http://static1.squarespace.com/static/563032b9e4b0465682348ce1/t/56cccd8cc6fc08356f9df8fc/1456262575475/" alt="Go to soccer search!" width="450" height="275" border="0" style="margin: 65px 65px 65px 65px;">
               </a>
-              <a href="http://main-coding-stuff-205030.nitrousapp.com/swimming_home">
+              <a href="/swimming_home">
                 <img src="http://www.aquaproduct.co.jp/english/img/product/title_aqua_14.jpg" alt="Go to soccer search!" width="450" height="275" border="0" class="sports_pic" style="margin: 65px 65px 65px 65px;">
               </a>
-              <a href="http://main-coding-stuff-205030.nitrousapp.com/basketball_home">
+              <a href="/basketball_home">
                 <img src=http://www.gymsportsflooring.com/wp-content/uploads/2011/07/Basketball-Court-7.jpg width="450" height="275" border="0" class="sports_pic" style="margin: 65px 65px 65px 65px;">
               </a>
 <!--                 <div class="col-sm-4 portfolio-item">
@@ -263,8 +263,8 @@
                 <div class="row">
                     <div class="footer-col col-md-4">
                         <h3>Location</h3>
-                        <p>3481 Melrose Place
-                            <br>Beverly Hills, CA 90210</p>
+                         <p>150 Broadway
+                            <br>New York, NY 10038</p>
                     </div>
                     <div class="footer-col col-md-4">
                         <h3>Around the Web</h3>
@@ -287,8 +287,8 @@
                         </ul>
                     </div>
                     <div class="footer-col col-md-4">
-                        <h3>About Freelancer</h3>
-                        <p>Freelance is a free to use, open source Bootstrap theme created by <a href="http://startbootstrap.com">Start Bootstrap</a>.</p>
+                        <h3>About the Creators</h3>
+                        <p>Our names are James Baumann and Jose Arismendi. We created this app to help find a field near you. In memory of Jonny Cohen.</p>
                     </div>
                 </div>
             </div>
